<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/gradiente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="384dp"
        android:layout_height="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cultivado"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_mundo"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/mundo_icon"
                android:drawableTop="@drawable/ic_earth"
                android:paddingVertical="60dp"
                android:gravity="center"
                android:text="@string/mundo"
                android:textColor="@color/cultivado" />

            <Button
                android:id="@+id/btn_paises"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/paises"
                android:drawableTop="@drawable/ic_bandeira"
                android:paddingVertical="60dp"
                android:gravity="center"
                android:text="@string/paises"
                android:textColor="@color/cultivado" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cultivado"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_estados"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/brasil"
                android:drawableTop="@drawable/ic_brazil_map"
                android:paddingVertical="60dp"
                android:gravity="center"
                android:text="@string/estados"
                android:textColor="@color/cultivado" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>