<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:background="@drawable/gradiente"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montaga"
        android:text="@string/estatisticas_mundiais"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        app:layout_constraintVertical_bias="0.16">

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/text_view_customize"
            android:backgroundTint="@color/azulEspacial"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:paddingLeft="30dp"
                android:text="@string/casos"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />
\
            <TextView
                android:id="@+id/view_casesResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="0"
                android:textColor="#FFFFFF"
                android:textAlignment="viewEnd"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/text_view_customize"
            android:backgroundTint="@color/background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:paddingLeft="30dp"
                android:text="@string/confirmados"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/view_confirmedResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:paddingRight="24dp"
                android:text="0"
                android:textAlignment="viewEnd"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/text_view_customize"
            android:backgroundTint="@color/azulEspacial"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_recovered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:paddingLeft="30dp"
                android:text="@string/curados"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/view_recoveredResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/text_view_customize"
            android:backgroundTint="@color/background"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:paddingLeft="30dp"
                android:text="@string/mortes"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/view_deathsResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="12dp"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linear"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>